--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,8 @@
   align-items: center;
   height: 100px;
   padding: 5px 10%;
-  font-family: 'Fira Sans', sans-serif; }
+  font-family: 'Fira Sans', sans-serif; 
+}
 
 .maindelindex {
   margin-top: 150px; }
@@ -45,17 +46,22 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 700px;
+  height: 560px;
   width: 750px;
-  margin-left: 25%; }
-
+  margin-left: 30%;
+  border: solid 5px white;
+  margin-top: 5%;
+}
+.enlace-sb{
+  text-decoration: none;
+  color: black;
+}
+.enlace-sb:hover{
+  color: #33383b;
+}
 body {
-  background-image: url(../imagenescarta/fondoinicio.jpg);
-  background-size: 100%; }
-
-¨ .bodydelindex {
-  background-image: url(../imagenescarta/fondoinicio.jpg); }
-
+  background-color: gray;
+}
 .snd {
   height: 50px;
   background-color: beige;
@@ -115,45 +121,147 @@ body {
   .card .card-body .card-text {
     color: white; }
 
-footer {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  position: relative;
-  bottom: 0; }
-
-.icon {
-  position: relative;
-  width: 80px;
-  height: 80px;
-  margin: 20px;
-  border-radius: 50%;
-  transition: all .8s;
-  cursor: pointer; }
-  .icon:hover {
-    background-color: #e60073;
-    box-shadow: 0 0 20px #e60073; }
-    .icon:hover:nth-child(2) {
-      background-color: #1877f2;
-      box-shadow: 0 0 20px #1877f2; }
-    .icon:hover:nth-child(3) {
-      background-color: #25d366;
-      box-shadow: 0 0 20px #25d366; }
-    .icon:hover circle {
-      stroke-dasharray: 220; }
-  .icon i {
-    color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 1.7rem; }
-
-svg circle {
-  stroke-dasharray: 150;
-  transition: all .8s ease-in-out; }
+   .footer-distributed {
+    border: solid 5px black;
+   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+   box-sizing: border-box;
+   width: 100%;
+   text-align: left;
+   font: bold 16px sans-serif;
+   padding: 55px 50px;
+   height: 100%;
+   margin-top: 80px;
+   position: relative;
+   }
+   .footer-distributed .footer-left {
+    display: inline-block;
+    vertical-align: top;
+    width: 40%; }
+   .footer-distributed .footer-center {
+    display: inline-block;
+    vertical-align: top;
+    width: 35%; }
+   .footer-distributed .footer-center i {
+    background-color: #33383b;
+    color: #ffffff;
+    font-size: 25px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    margin: 10px 15px;
+    vertical-align: middle; }
+    .footer-distributed .footer-center i.fa-envelope {
+    font-size: 17px;
+    line-height: 38px; }
+    .footer-distributed .footer-center p {
+    display: inline-block;
+    color: #ffffff;
+    vertical-align: middle;
+    margin: 0; }
+    .footer-distributed .footer-center p span {
+    display: block;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2; }
+    .footer-distributed .footer-center p a {
+    color: #5383d3;
+    text-decoration: none; }
+    .footer-distributed .footer-right {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%; }
+    .footer-distributed h3 {
+    color: #ffffff;
+    font: normal 36px "Cookie", cursive;
+    margin: 0; }
+    .footer-distributed h3 span {
+    color: #5383d3; }
+    .footer-distributed .footer-links {
+    color: #ffffff;
+    margin: 20px 0 12px;
+    padding: 0; }
+    .footer-distributed .footer-links a {
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit; }
+    .footer-distributed .footer-company-name {
+    color: #8f9296;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0; }
+   .footer-distributed .footer-company-about {
+    line-height: 20px;
+    color: #92999f;
+    font-size: 13px;
+    font-weight: normal;
+    margin: 0; 
+  }
+    .footer-distributed .footer-company-about span {
+      display: block;
+      color: #ffffff;
+      font-size: 14px;
+      font-weight: bold;
+      margin-bottom: 20px; }
+    .footer-distributed .footer-icons {
+    margin-top: 25px; 
+  }
+    .footer-distributed .footer-icons a {
+      display: inline-block;
+      width: 35px;
+      height: 35px;
+      cursor: pointer;
+      background-color: #33383b;
+      border-radius: 2px;
+      font-size: 20px;
+      color: #ffffff;
+      text-align: center;
+      line-height: 35px;
+      margin-right: 3px;
+      margin-bottom: 5px; 
+    }
+    .img-footer{
+      width: 160px;
+      height: 160px;
+    }
+    .icono-ig:hover{
+      cursor: pointer;
+      transform: scale(1.15);
+    }
+    .icono-wp:hover{
+      cursor: pointer;
+      transform: scale(1.15);
+    }
+    .icono-fb:hover{
+      cursor: pointer;
+      transform: scale(1.15);
+    }
+    .footer-logo-company{
+      max-width: 150px;
+      max-height: 150px;
+    }
+@media (max-width: 880px) {
+  .footer-distributed {
+    font: bold 14px sans-serif; }
+    .footer-distributed .footer-left {
+      display: block;
+      width: 100%;
+      margin-bottom: 40px;
+      text-align: center; }
+    .footer-distributed .footer-center {
+      display: block;
+      width: 100%;
+      margin-bottom: 40px;
+      text-align: center; }
+      .footer-distributed .footer-center i {
+        margin-left: 0; }
+    .footer-distributed .footer-right {
+      display: block;
+      width: 100%;
+      margin-bottom: 40px;
+      text-align: center; } }
 
 form img {
   width: 100px;
@@ -164,8 +272,18 @@ form img {
 
 @media screen and (max-width: 1200px) {
   .formulario {
-    margin-left: 50px; } }
+    margin-left: 50px; } 
+    .cartasdelmenu{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
 
 @media screen and (max-width: 820px) {
   .formulario {
-    margin-left: 0px; } }
+    margin-left: 0px; } 
+  .cartasdelmenu{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  }
