--- a/stylescompiled/styles.scss
+++ b/stylescompiled/styles.scss
@@ -127,51 +127,143 @@ body {
 		}
 	}
 }
-footer {
+.footer-distributed {
+	background-color: #000;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
 	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	flex-wrap: wrap;
-	position: relative;
-	bottom: 0;
-}
-.icon {
-	position: relative;
-	width: 80px;
-	height: 80px;
-	margin: 20px;
-	border-radius: 50%;
-	transition: all .8s;
-	cursor: pointer;
-	&:hover {
-		background-color: #e60073;
-		box-shadow: 0 0 20px #e60073;
-		&:nth-child(2) {
-			background-color: #1877f2;
-			box-shadow: 0 0 20px #1877f2;
+	text-align: left;
+	font: bold 16px sans-serif;
+	padding: 55px 50px;
+	margin-top: 80px;
+	.footer-left {
+		display: inline-block;
+		vertical-align: top;
+		width: 40%;
+	}
+	.footer-center {
+		display: inline-block;
+		vertical-align: top;
+		width: 35%;
+		i {
+			background-color: #33383b;
+			color: #ffffff;
+			font-size: 25px;
+			width: 38px;
+			height: 38px;
+			border-radius: 50%;
+			text-align: center;
+			line-height: 42px;
+			margin: 10px 15px;
+			vertical-align: middle;
 		}
-		&:nth-child(3) {
-			background-color: #25d366;
-			box-shadow: 0 0 20px #25d366;
+		i.fa-envelope {
+			font-size: 17px;
+			line-height: 38px;
 		}
-		circle {
-			stroke-dasharray: 220;
+		p {
+			display: inline-block;
+			color: #ffffff;
+			vertical-align: middle;
+			margin: 0;
+			span {
+				display: block;
+				font-weight: normal;
+				font-size: 14px;
+				line-height: 2;
+			}
+			a {
+				color: #5383d3;
+				text-decoration: none;
+			}
 		}
 	}
-	i {
-		color: white;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%,-50%);
-		font-size: 1.7rem;
+	.footer-right {
+		display: inline-block;
+		vertical-align: top;
+		width: 20%;
+	}
+	h3 {
+		color: #ffffff;
+		font: normal 36px "Cookie", cursive;
+		margin: 0;
+		span {
+			color: #5383d3;
+		}
+	}
+	.footer-links {
+		color: #ffffff;
+		margin: 20px 0 12px;
+		padding: 0;
+		a {
+			display: inline-block;
+			line-height: 1.8;
+			text-decoration: none;
+			color: inherit;
+		}
+	}
+	.footer-company-name {
+		color: #8f9296;
+		font-size: 14px;
+		font-weight: normal;
+		margin: 0;
+	}
+	.footer-company-about {
+		line-height: 20px;
+		color: #92999f;
+		font-size: 13px;
+		font-weight: normal;
+		margin: 0;
+		span {
+			display: block;
+			color: #ffffff;
+			font-size: 14px;
+			font-weight: bold;
+			margin-bottom: 20px;
+		}
+	}
+	.footer-icons {
+		margin-top: 25px;
+		a {
+			display: inline-block;
+			width: 35px;
+			height: 35px;
+			cursor: pointer;
+			background-color: #33383b;
+			border-radius: 2px;
+			font-size: 20px;
+			color: #ffffff;
+			text-align: center;
+			line-height: 35px;
+			margin-right: 3px;
+			margin-bottom: 5px;
+		}
 	}
 }
-svg {
-	circle {
-		stroke-dasharray: 150;
-		transition: all .8s ease-in-out;
+@media (max-width: 880px) {
+	    .footer-distributed {
+		font: bold 14px sans-serif;
+		.footer-left {
+			display: block;
+			width: 100%;
+			margin-bottom: 40px;
+			text-align: center;
+		}
+		.footer-center {
+			display: block;
+			width: 100%;
+			margin-bottom: 40px;
+			text-align: center;
+			i {
+				margin-left: 0;
+			}
+		}
+		.footer-right {
+			display: block;
+			width: 100%;
+			margin-bottom: 40px;
+			text-align: center;
+		}
 	}
 }
 form {
