--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,20 +1,300 @@
-@charset "UTF-8";
+/*GALERIA*/
+/*FIN GALERIA*/
+/*FORMULARIO*/
+/*FIN FORMULARIO*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100px;
-  padding: 5px 10%;
-  font-family: 'Fira Sans', sans-serif; 
-}
-
 .maindelindex {
-  margin-top: 150px; }
+  height: 55rem;
+  background-image: url(../imagenes-carousel/salmon-2454443_1280.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; }
+
+.maindelform {
+  height: 55rem;
+  background-image: url(../imagenes-carousel/fondoform.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; }
+
+.maindeenvios {
+  height: 55rem;
+  background-image: url(../imagenes-carousel/fondoenvios.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; }
+
+.maindelmenu {
+  height: 55rem;
+  background-image: url(../imagenes-carousel/fondomenu.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; }
+
+.maindevariedad {
+  height: 55rem;
+  background-image: url(../imagenes-carousel/fondovariedades.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; }
+
+.indexcont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  color: white; }
+  .indexcont h2 {
+    margin-top: 20rem;
+    text-shadow: 3px 3px gray; }
+
+.sub-in {
+  font-size: 50px;
+  font-family: 'Pacifico', cursive;
+  text-shadow: 2px 2px gray; }
+
+.sub-in2 {
+  font-size: 30px;
+  font-family: 'Pacifico', cursive;
+  text-shadow: 2px 2px gray; }
+
+.galeria-menu {
+  background-color: gray; }
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  background: black;
+  padding: 15px; }
+  .container img {
+    width: 100%;
+    transition: all 100ms ease-out; }
+    .container img:hover {
+      transform: scale(1.04); }
+  .container .row img {
+    width: 360px;
+    height: 550px;
+    margin: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+
+.formulario {
+  background-image: url(../imagenes-carousel/fondoformu.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; }
+
+button {
+  overflow: visible;
+  text-transform: none;
+  color: white;
+  font: inherit; }
+
+select {
+  text-transform: none;
+  color: white;
+  font: inherit;
+  background: none;
+  border: none;
+  border-bottom: solid 2px #474544;
+  color: #474544;
+  font-size: 1.000em;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin: 0em 0 1.875em 0;
+  padding: 0 0 0.875em 0;
+  text-transform: uppercase;
+  width: 100%;
+  box-sizing: border-box;
+  transition: all 0.3s;
+  background: url("https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-32.png") no-repeat right;
+  outline: none; }
+  select::-ms-expand {
+    display: none; }
+
+input {
+  color: white;
+  font: inherit;
+  line-height: normal; }
+
+textarea {
+  color: white;
+  font: inherit;
+  overflow: auto;
+  background: none;
+  border: none;
+  border-bottom: solid 2px #474544;
+  color: #474544;
+  font-size: 1.000em;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin: 0em 0 1.875em 0;
+  padding: 0 0 0.875em 0;
+  text-transform: uppercase;
+  width: 100%;
+  box-sizing: border-box;
+  transition: all 0.3s;
+  line-height: 150%;
+  height: 150px;
+  resize: none;
+  width: 100%; }
+  textarea:focus {
+    outline: none;
+    padding: 0 0 0.875em 0; }
+
+#container {
+  border: solid 3px black;
+  max-width: 768px;
+  margin: 35px auto;
+  position: relative;
+  background-color: beige; }
+
+form {
+  padding: 37.5px;
+  margin: 50px 0; }
+  form img {
+    width: 100px;
+    height: 100px; }
+    form img:hover {
+      transform: scale(1.15);
+      cursor: pointer; }
+
+h1 {
+  color: #474544;
+  font-size: 32px;
+  font-weight: 700;
+  letter-spacing: 7px;
+  text-align: center;
+  text-transform: uppercase; }
+
+.underline {
+  border-bottom: solid 2px #474544;
+  margin: -0.512em auto;
+  width: 80px; }
+
+.icon {
+  display: block;
+  fill: #474544;
+  height: 50px;
+  margin: 0 auto;
+  width: 50px; }
+
+.email {
+  float: right;
+  width: 45%; }
+
+input[type='text'] {
+  background: none;
+  border: none;
+  border-bottom: solid 2px #474544;
+  color: #474544;
+  font-size: 1.000em;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin: 0em 0 1.875em 0;
+  padding: 0 0 0.875em 0;
+  text-transform: uppercase;
+  width: 100%;
+  box-sizing: border-box;
+  transition: all 0.3s; }
+  input[type='text']:focus {
+    outline: none;
+    padding: 0 0 0.875em 0; }
+
+[type='email'] {
+  background: none;
+  border: none;
+  border-bottom: solid 2px #474544;
+  color: #474544;
+  font-size: 1.000em;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin: 0em 0 1.875em 0;
+  padding: 0 0 0.875em 0;
+  text-transform: uppercase;
+  width: 100%;
+  box-sizing: border-box;
+  transition: all 0.3s; }
+  [type='email']:focus {
+    outline: none;
+    padding: 0 0 0.875em 0; }
+
+.message {
+  float: none; }
+
+.name {
+  float: left;
+  width: 45%; }
+
+.subject {
+  width: 100%; }
+
+.telephone {
+  width: 100%; }
+
+::-webkit-input-placeholder {
+  color: #474544; }
+
+:-moz-placeholder {
+  color: #474544;
+  opacity: 1; }
+
+::-moz-placeholder {
+  color: #474544;
+  opacity: 1; }
+
+:-ms-input-placeholder {
+  color: #474544; }
+
+#form_button {
+  background: none;
+  border: solid 2px #474544;
+  color: #474544;
+  cursor: pointer;
+  display: inline-block;
+  font-family: 'Helvetica', Arial, sans-serif;
+  font-size: 0.875em;
+  font-weight: bold;
+  outline: none;
+  padding: 20px 35px;
+  text-transform: uppercase;
+  transition: all 0.3s; }
+  #form_button:hover {
+    background: #474544;
+    color: #F2F3EB; }
+
+.div__contenedor {
+  width: 100%; }
+
+.botonindex {
+  font-family: 'Pacifico', cursive; }
+
+.seccion-sobre-n {
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Pacifico', cursive; }
+
+.sub-sobre {
+  font-family: 'Pacifico', cursive; }
+
+.contenedordeitems li:hover {
+  transform: scale(1.15);
+  color-interpolation-filters: auto; }
 
 .boton {
   text-align: center;
@@ -22,46 +302,32 @@
   display: inline-block;
   color: #FFF;
   background: #7F8C8D;
-  padding: 15px 40px;
+  padding: 1rem 2.5rem;
   white-space: nowrap;
-  margin: 200px 10px;
+  margin: 12.5rem 0.625rem;
   transition: all 0.2s ease-in-out; }
   .boton:hover {
-    background-color: orange; }
+    background-color: gray; }
 
 .carousel {
-  height: 800px;
-  width: 650px; }
+  height: 50rem;
+  width: 40rem; }
 
 .carousel-inner img {
-  height: 800px;
-  width: 650px; }
+  height: 50rem;
+  width: 40rem; }
 
 .carouseldepics {
   display: flex;
   justify-content: center;
-  margin: 15px; }
+  margin: 1rem; }
 
-.formulario {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 560px;
-  width: 750px;
-  margin-left: 30%;
-  border: solid 5px white;
-  margin-top: 5%;
-}
-.enlace-sb{
+.enlace-sb {
   text-decoration: none;
-  color: black;
-}
-.enlace-sb:hover{
-  color: #33383b;
-}
-body {
-  background-color: gray;
-}
+  color: black; }
+  .enlace-sb:hover {
+    color: #33383b; }
+
 .snd {
   height: 50px;
   background-color: beige;
@@ -92,122 +358,95 @@ body {
   display: flex;
   justify-content: center; }
 
-.container .row img {
-  width: 360px;
-  height: 550px;
-  margin: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
 .titulodelmenu {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 10px; }
 
-.cartasdelmenu {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin: 25px;
-  margin-left: 130px; }
-
-.card {
-  margin: 25px;
-  background-color: black;
-  border: solid 5px beige; }
-  .card .card-body .card-title {
-    color: white; }
-  .card .card-body .card-text {
-    color: white; }
-
-   .footer-distributed {
-    border: solid 5px black;
-   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-   box-sizing: border-box;
-   width: 100%;
-   text-align: left;
-   font: bold 16px sans-serif;
-   padding: 55px 50px;
-   height: 100%;
-   margin-top: 80px;
-   position: relative;
-   }
-   .footer-distributed .footer-left {
+.footer-distributed {
+  border: solid 1px white;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: bold 16px sans-serif;
+  padding: 55px 50px;
+  height: 100%;
+  position: relative; }
+  .footer-distributed .footer-left {
     display: inline-block;
     vertical-align: top;
     width: 40%; }
-   .footer-distributed .footer-center {
+  .footer-distributed .footer-center {
     display: inline-block;
     vertical-align: top;
     width: 35%; }
-   .footer-distributed .footer-center i {
-    background-color: #33383b;
-    color: #ffffff;
-    font-size: 25px;
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 42px;
-    margin: 10px 15px;
-    vertical-align: middle; }
+    .footer-distributed .footer-center i {
+      background-color: #33383b;
+      color: #ffffff;
+      font-size: 25px;
+      width: 38px;
+      height: 38px;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 42px;
+      margin: 10px 15px;
+      vertical-align: middle; }
     .footer-distributed .footer-center i.fa-envelope {
-    font-size: 17px;
-    line-height: 38px; }
+      font-size: 17px;
+      line-height: 38px; }
     .footer-distributed .footer-center p {
-    display: inline-block;
-    color: #ffffff;
-    vertical-align: middle;
-    margin: 0; }
-    .footer-distributed .footer-center p span {
-    display: block;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 2; }
-    .footer-distributed .footer-center p a {
-    color: #5383d3;
-    text-decoration: none; }
-    .footer-distributed .footer-right {
+      display: inline-block;
+      color: #ffffff;
+      vertical-align: middle;
+      margin: 0; }
+      .footer-distributed .footer-center p span {
+        display: block;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 2; }
+      .footer-distributed .footer-center p a {
+        color: #5383d3;
+        text-decoration: none; }
+  .footer-distributed .footer-right {
     display: inline-block;
     vertical-align: top;
     width: 20%; }
-    .footer-distributed h3 {
+  .footer-distributed h3 {
     color: #ffffff;
     font: normal 36px "Cookie", cursive;
     margin: 0; }
     .footer-distributed h3 span {
-    color: #5383d3; }
-    .footer-distributed .footer-links {
+      color: #5383d3; }
+  .footer-distributed .footer-links {
     color: #ffffff;
     margin: 20px 0 12px;
     padding: 0; }
     .footer-distributed .footer-links a {
-    display: inline-block;
-    line-height: 1.8;
-    text-decoration: none;
-    color: inherit; }
-    .footer-distributed .footer-company-name {
+      display: inline-block;
+      line-height: 1.8;
+      text-decoration: none;
+      color: inherit; }
+  .footer-distributed .footer-company-name {
     color: #8f9296;
     font-size: 14px;
     font-weight: normal;
     margin: 0; }
-   .footer-distributed .footer-company-about {
+  .footer-distributed .footer-company-about {
     line-height: 20px;
     color: #92999f;
     font-size: 13px;
     font-weight: normal;
-    margin: 0; 
-  }
+    margin: 0; }
     .footer-distributed .footer-company-about span {
       display: block;
       color: #ffffff;
       font-size: 14px;
       font-weight: bold;
       margin-bottom: 20px; }
-    .footer-distributed .footer-icons {
-    margin-top: 25px; 
-  }
+  .footer-distributed .footer-icons {
+    margin-top: 25px; }
     .footer-distributed .footer-icons a {
       display: inline-block;
       width: 35px;
@@ -220,28 +459,53 @@ body {
       text-align: center;
       line-height: 35px;
       margin-right: 3px;
-      margin-bottom: 5px; 
-    }
-    .img-footer{
-      width: 160px;
-      height: 160px;
-    }
-    .icono-ig:hover{
-      cursor: pointer;
-      transform: scale(1.15);
-    }
-    .icono-wp:hover{
-      cursor: pointer;
-      transform: scale(1.15);
-    }
-    .icono-fb:hover{
-      cursor: pointer;
-      transform: scale(1.15);
-    }
-    .footer-logo-company{
-      max-width: 150px;
-      max-height: 150px;
-    }
+      margin-bottom: 5px; }
+
+.img-footer {
+  width: 160px;
+  height: 160px; }
+
+.icono-ig:hover {
+  cursor: pointer;
+  transform: scale(1.15);
+  background-color: violet; }
+
+.icono-wp:hover {
+  cursor: pointer;
+  transform: scale(1.15);
+  background-color: green; }
+
+.icono-fb:hover {
+  cursor: pointer;
+  transform: scale(1.15);
+  background-color: blue; }
+
+.footer-logo-company {
+  max-width: 150px;
+  max-height: 150px; }
+
+@media screen and (max-width: 768px) {
+  #container {
+    margin: 20px auto;
+    width: 95%; } }
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 26px; }
+  .underline {
+    width: 68px; }
+  #form_button {
+    padding: 15px 25px; } }
+
+@media screen and (max-width: 420px) {
+  h1 {
+    font-size: 18px; }
+  .icon {
+    height: 35px;
+    width: 35px; }
+  .underline {
+    width: 53px; } }
+
 @media (max-width: 880px) {
   .footer-distributed {
     font: bold 14px sans-serif; }
@@ -263,27 +527,16 @@ body {
       margin-bottom: 40px;
       text-align: center; } }
 
-form img {
-  width: 100px;
-  height: 100px; }
-  form img:hover {
-    transform: scale(1.15);
-    cursor: pointer; }
-
 @media screen and (max-width: 1200px) {
   .formulario {
-    margin-left: 50px; } 
-    .cartasdelmenu{
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
+    margin-left: 50px; }
+  .cartasdelmenu {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); } }
 
 @media screen and (max-width: 820px) {
   .formulario {
-    margin-left: 0px; } 
-  .cartasdelmenu{
+    margin-left: 0px; }
+  .cartasdelmenu {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-  }
-  }
+    grid-template-columns: repeat(1, 1fr); } }
