--- a/styles/styles.css
+++ b/styles/styles.css
@@ -532,7 +532,4 @@ input[type='text'] {
 
 @media screen and (max-width: 820px) {
   .formulario {
-    margin-left: 0px; }
-  .cartasdelmenu {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr); } }
+    margin-left: 0px; } }
